Lazy Loading Completado

--- a/entrada.html
+++ b/entrada.html
@@ -34,7 +34,7 @@
 
     <main class="contenedor">
         <h3 class="centrar-texto">Entrada Blog</h3>
-        <img src="img/blog1.jpg" alt="imagen del blog">
+        <img loading="lazy" src="img/blog1.jpg" alt="imagen del blog">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus iusto esse dolorem exercitationem dolor commodi repellat fugiat necessitatibus nobis reprehenderit aspernatur, quibusdam distinctio praesentium beatae quos velit quam adipisci eveniet dignissimos, molestias cumque labore cum molestiae. Quia magni numquam commodi! Accusantium ut quia dolorem illo! Accusantium nesciunt dolorem illum expedita iusto obcaecati aliquid voluptatem assumenda, quae aut nemo pariatur?</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit placeat distinctio quod harum animi cupiditate temporibus perferendis, adipisci vel itaque mollitia! Facere quae mollitia magni ut ab molestiae asperiores rerum nulla architecto. Velit distinctio esse assumenda eum doloremque, possimus tempora consequuntur fuga ipsam nam pariatur, ab delectus, voluptatem amet rerum! Eveniet aliquam iste assumenda suscipit pariatur sapiente deserunt, at commodi.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem saepe corrupti, numquam atque, explicabo dolorem quis quia ab, excepturi nihil repudiandae dignissimos nostrum! Harum consequuntur, nostrum corrupti dignissimos, beatae vel saepe id modi maxime quidem eius molestiae iure odit voluptatem, sint aspernatur veritatis. Et asperiores possimus nulla enim eveniet, molestiae exercitationem soluta aliquid in provident deleniti voluptatibus. Tenetur, neque illo.</p>
