--- a/nosotros.html
+++ b/nosotros.html
@@ -37,7 +37,7 @@
 
         <div class="sobre-nosotros">
             <div class="sobre-nosotros__imagen">
-                <img src="img/nosotros.jpg" alt="imagen nosotros">
+                <img loading="lazy" src="img/nosotros.jpg" alt="imagen nosotros">
             </div>
 
             <div class="sobre-nosotros__texto">
